--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -35,7 +35,15 @@
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
-                <h4>Internet, Kitchen...</h4>                
+                <h4>Internet, Kitchen...</h4> 
+                <div class="popover">
+                    <ul>
+                        <li>Internet</li>
+                        <li>TV</li>
+                        <li>Kitchen</li>
+                        <li>Iron</li>
+                    </ul>
+                </div>               
             </div>
             <button>Search</button>
         </section>
